cd-inject-weld module-info
Signed-off-by: jansupol <jan.supol@oracle.com>